--- a/style.css
+++ b/style.css
@@ -518,6 +518,7 @@ nav {
     padding-left: 2rem;
     padding-right: 3rem;
     margin-top: 3%;
+    margin-bottom: -22rem;
 }
 
 .card1I {
@@ -652,4 +653,29 @@ nav {
     padding-top: 6rem;
     color: black;
     font-weight: 800;
+}
+
+.link1 {
+    display: flex;
+    text-align: center;
+    /* align-content: unset; */
+    padding-left: 49rem;
+    /* padding-bottom: 31em; */
+}
+
+.link1 a {
+    font-size: 1.2em;
+    font-weight: 800;
+}
+
+.images {
+    display: flex;
+    flex-direction: row;
+    padding-left: 18em;
+    padding-top: 7em;
+}
+
+.ob{
+ padding-left: 6em;
+
 }
