--- a/style.css
+++ b/style.css
@@ -679,3 +679,33 @@ nav {
  padding-left: 6em;
 
 }
+.faq{
+    background-color: white;
+    padding-left: 18rem;
+    padding-top: 8rem;
+    padding-bottom: 6rem;
+}
+.faq-head{
+    font-size: 2.5rem;
+    font-weight: 900;
+    padding-bottom: 1rem;
+}
+
+.Input1 {
+    /* padding-bottom: 0.5rem; */
+    border-bottom: 1px solid #E7E7E7;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    font-size: 1.5em;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    font-weight: 540;
+    position: relative;
+}
+
+.Input1 img{
+    height: .5rem;
+    position: absolute;
+    right: 0px;
+}
