--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@
     padding: 0;
     font-family: sans-serif;
 }
+  @media screen and (max-width:1200px) and (min-width:768px) {
 
+    .container{
+        width: 50%;
+    }
+ 
+}
 .container {
     width: 100%;
     min-height: 100vh;
@@ -830,4 +836,55 @@ nav {
 
     position: absolute;
     right: 185px;
+}
+
+@media(max-width:500px) {
+    body{
+        width: 100%;
+    }
+.home-2 img{
+    width:14vh;
+}
+.home-3 {
+    background-color: #F8F8F8;
+    width: 50vh;
+    padding-left: 7%;
+    padding-top: 5%;
+}
+.home-3-sub1 {
+    font-size: 16px;
+    font-weight: 900;
+    width: 29vh;
+}
+.home-3-sub2 {
+    font-size: 8px;
+    padding-top: 2%;
+}
+.home-1 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 6%;
+    height: 0px;
+    padding-top: 4%;
+}
+.but1 {
+    background-color: #0066FF;
+    border: none;
+    color: white;
+    padding: 6px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 5px;
+    border-radius: 5px;
+}
+.tri1 img {
+    width: 6px;
+    height: 6px;
+}
+
+.line1 img {
+    width: 1px;
+    height: 66px;
+}
 }
