--- a/style.css
+++ b/style.css
@@ -1285,7 +1285,57 @@ nav {
     background-color: white;
     padding-bottom: 3rem;
 }
+.footer1 {
+    background-color: #273343;
+    display: flex;
+    flex-direction: row;
+    color: grey;
+    padding-top: 3rem;
+    padding-left: 0;
+    padding-bottom: 0rem;
+}
 
 
-
+.footersub {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0.5rem;
+}
+.footer1sub {
+    display: flex;
+    flex-direction: column;
+    /* padding-left: 10rem; */
+    padding-left: 0;
+}
+.footersubs {
+    padding-top: 1rem;
+    padding-right: 1rem;
+}
+.footersubhead {
+    font-size: 1rem;
+    font-weight: 900;
+    color: white;
+}
+.footer1subb {
+    display: flex;
+    flex-direction: column;
+    /* padding-left: 10rem; */
+    padding-top: 4rem;
+    padding-left: 0%;
+}
+.footer-icons{
+    width: 9px;
+}
+.but3 {
+    background-color: #0066FF;
+    border: none;
+    color: white;
+    padding: 0px 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 0.5rem;
+    width: 8rem;
+}
 }
